--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ display: block;
 <!--Form Action Post-->
 
 
-<form action="?" method="post" name="fueltracker" id="fuel" class="fuel">
+<form action="" name="fueltracker" id="fuel" class="fuel">
 
 <!--End-->
 
